# pandemic

./: .gitignore  COVID_maths.ipynb  pyproject.toml  requirements.txt
