[tool.poetry]
name = "pandemic"
version = "0.1.0"
description = ""
authors = ["Florencia <floreencia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.0.1"
plotly = "^4.5.4"
numpy = "^1.18.2"
pandas = "^1.0.3"
seaborn = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
